linkerd/requestTimeout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: productcatalog
  namespace: otel-demo
  annotations:
    timeout.linkerd.io/request: 90ms
    timeout.linkerd.io/response: 90ms
spec:
  parentRefs:
    - name: opentelemetry-demo-frontend
      kind: Service
      group: core
      port:  8080
  rules:
  - matches:
      - method:
          service: oteldemo.ProductCatalogService
          method: GetProduct
      - method:
          service: oteldemo.ProductCatalogService
          method: ListProducts
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog
  namespace: otel-demo
  annotations:
    timeout.linkerd.io/request: 50ms
    timeout.linkerd.io/response: 50ms
spec:
  parentRefs:
    - name: opentelemetry-demo-frontend
      kind: Service
      group: core
      port: 8080

  rules:
  - matches:
    - path:
        value: "/oteldemo.CartService/GetCart"
    - path:
        value: "/oteldemo.CartService/AddItem"
    - path:
        value: "/oteldemo.CartService/EmptyCart"
    timeouts:
      request: 10s
      backendRequest: 2s

---
